got help from mentor to fix footer and get images to align how I prefer

--- a/style/index.css
+++ b/style/index.css
@@ -20,14 +20,17 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
+
+
 * {
     background-color: rgb(104, 0, 145);
     color: white;
     font-size: 62.5%;
-    width: 80vw;
     text-align: center;
     font-family: 'Raleway', sans-serif;
 }
+
+
 
 header{
     height:20vh;
@@ -73,10 +76,65 @@ button{
 }
 
 .container{
+    
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    width: 15rem;
-    height: 15rem;
+    margin-top: 15%;
+    width:100%;
+    align-content: space-around;
+    height: 50%;
 }
+
+.container img{
+    width: 30rem;
+    height: 30rem;
+    margin: 2rem;
+}
+
+body{
+
+    height: 100vh;
+}
+
+footer{
+    
+   Height: 255px;
+   display:flex;
+   align-items: center;
+   justify-content: center;
+   margin-top: 25rem;
+}
+
+
+.contact-me{
+   
+    background-color: transparent;
+    width: 15%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-me button{
+    width: 100%;
+}
+
+/* .end-contact{
+    background-color: rgb(222, 139, 255);
+    color: rgb(104, 0, 145);
+    border:none;
+    border-radius:1rem;
+    padding:1rem;
+    width: 5rem;
+    margin: 1%;
+    font-size: 1rem;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    position:absolute; 
+    bottom:0;
+    width: 10%;
+    margin-bottom: 3%;
+} */
